--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,12 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
 node_modules
-dist
-dist-ssr
-*.local
+.next
+.env
+.env.local
+.env.production
+.env.development
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Supabase
+supabase/.env
+
+# OS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
